8215221: Serial GC misreports young GC time

Reviewed-by: kbarrett, manc